crates/retiretui_tui/src/snapshots/retiretui_tui__frames__compare_difference_200x55.snap
---
source: crates/retiretui_tui/src/frames.rs
assertion_line: 44
expression: composed_frame(app)
---
╭──────────╮╭────────╮╭─────────╮╭───────╮╭──────╮                                                                                                                                                      
│1 Overview││2 Ledger││3 Compare││4 Tools││5 Plan│                                                                                                                                          plan.toml ● 
┴──────────┴┴────────┴╯         ╰┴───────┴┴──────┴──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
╭ Plans · against plan.toml · today's dollars ──────────────────────────────────────────────────────────────────────────────────────╮╭ Changes · plan.toml ────────────────────────────────────────────╮
│     Plan          Ends with  Money lasts    Success  Net worth 2026  Lifetime taxes               Peaks at  Medicare              ││▏ The baseline.                                                  │
│▌ ━━ plan.toml        $2.09M  Never short       100%          $1.07M           $697k         $2.09M in 2074        $0              ││                                                                 │
│  ━━ poorer.toml      -$918k         same  -10.0 pts          -$210k           -$73k  -$317k, 38 yrs sooner        $0              ││                                                                 │
│                                                                                                                                   ││                                                                 │
│                                                                                                                                   ││                                                                 │
│                                                                                                                                   ││                                                                 │
╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯╰─────────────────────────────────────────────────────────────────╯
╭ Net worth by year · today's dollars · 2026 ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│0    │⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉│
│     │┊                                                                                                                                                                                               │
│     │┊                                                                                                                                                                                               │
│     │┊                                                                                                                                                                                               │
│     │┊                                                                                                                                                                                               │
│     │┊                                                                                                                                                                                               │
│     │┊                                                                                                                                                                                               │
│     │┊                                                                                                                                                                                               │
│     │⠒⠒⠢⠤⠤⠤⠤⠤⠤⠤⢄⣀⣀⣀⡀                                                                                                                                                                                 │
│     │┊             ⠈⠉⠉⠉⠑⠒⠒⠒⠢⠤⠤⠤⢄⣀⣀⣀⡀                                                                                                                                                                 │
│     │┊                             ⠈⠉⠉⠉⠑⠒⠒⠒⠢⠤⠤⠤⢄⣀⣀⣀⡀                                                                                                                                                 │
│     │┊                                             ⠈⠉⠉⠉⠑⠒⠒⠢⠤⢄⣀                                                                                                                                       │
│     │┊                                                        ⠉⠒⠤⡀                                                                                                                                   │
│     │┊                                                           ⠈⠑⠢⣀                                                                                                                                │
│     │┊                                                               ⠉⠒⠢⢄⣀                                                                                                                           │
│     │┊                                                                    ⠉⠒⠤⣀                                                                                                                       │
│     │┊                                                                        ⠉⠑⠢⠤⢄⣀⡀                                                                                                                │
│     │┊                                                                              ⠈⠉⠑⠒⠢⠤⣀⡀                                                                                                         │
│     │┊                                                                                     ⠈⠑⠒⠢⠤⢄⣀                                                                                                   │
│     │┊                                                                                            ⠉⠑⠢⠤⣀⣀                                                                                             │
│     │┊                                                                                                  ⠉⠑⠒⠤⣀⡀                                                                                       │
│     │┊                                                                                                       ⠈⠉⠒⠤⢄⣀                                                                                  │
│     │┊                                                                                                             ⠉⠒⠢⠤⣀                                                                             │
│     │┊                                                                                                                  ⠉⠑⠒⠤⣀⡀                                                                       │
│     │┊                                                                                                                       ⠈⠉⠒⠤⢄⣀                                                                  │
│     │┊                                                                                                                             ⠉⠒⠢⢄⡀                                                             │
│     │┊                                                                                                                                 ⠈⠑⠢⠤⣀                                                         │
│     │┊                                                                                                                                      ⠉⠑⠢⢄⡀                                                    │
│     │┊                                                                                                                                          ⠈⠉⠒⠒⠤⠤⣀⣀                                             │
│     │┊                                                                                                                                                  ⠉⠉⠒⠒⠤⢄⣀                                      │
│     │┊                                                                                                                                                         ⠉⠒⠒⠤⠤⣀⣀                               │
│     │┊                                                                                                                                                                ⠉⠉⠒⠒⠤⠤⣀⡀                       │
│     │┊                                                                                                                                                                       ⠈⠉⠒⠤⠤⣀⣀                 │
│     │┊                                                                                                                                                                              ⠉⠑⠒⠤⣀⡀           │
│     │┊                                                                                                                                                                                   ⠈⠉⠒⠤⢄⣀      │
│     │┊                                                                                                                                                                                         ⠉⠒⠢⠤⣀ │
│     │┊                                                                                                                                                                                              ⠉│
│-964k│┊                                                                                                                                                                                               │
│     └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│
│  2026                                                                                              2050                                                                                          2074│
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
Compare this plan with others in its folder: c adds one.                                                                                                                                                
 ↑↓ plan  ⏎ open  ←→ metric  ⇥ pane  c add  x remove  b baseline  d diff  v view  ctrl-s save  r reload  q quit  ctrl-↓ tab  n dollars                                               : commands  ? help
