crates/retiretui_tui/src/snapshots/retiretui_tui__frames__compare_one_by_year_128x32.snap
---
source: crates/retiretui_tui/src/frames.rs
assertion_line: 44
expression: composed_frame(app)
---
╭──────────╮╭────────╮╭─────────╮╭───────╮╭──────╮                                                                              
│1 Overview││2 Ledger││3 Compare││4 Tools││5 Plan│                                                                  plan.toml ● 
┴──────────┴┴────────┴╯         ╰┴───────┴┴──────┴──────────────────────────────────────────────────────────────────────────────
╭ Plans · today's dollars ──────────────────────────────────────────────────────────╮╭ Changes · plan.toml ────────────────────╮
│     Plan          Ends with  Money lasts  Success  Net worth 2026  Lifetime taxes ││▏ The baseline.                          │
│▌ ━━ plan.toml        $2.09M  Never short     100%          $1.07M           $697k ││                                         │
│  ━━ richer.toml      $3.99M  Never short     100%          $1.70M           $770k ││                                         │
│                                                                                   ││                                         │
│                                                                                   ││                                         │
│                                                                                   ││                                         │
╰───────────────────────────────────────────────────────────────────────────────────╯╰─────────────────────────────────────────╯
╭ Net worth by year · today's dollars · 2026 ──────────────────────────────────────────────────────────────────────────────────╮
│  Year   plan.toml  richer.toml                                                                                              ▲│
│▏ 2026      $1.07M       $1.70M                                                                                              █│
│  2027      $1.14M       $1.79M                                                                                              █│
│  2028      $1.22M       $1.89M                                                                                              █│
│  2029      $1.31M       $1.98M                                                                                              █│
│  2030      $1.39M       $2.09M                                                                                              █│
│  2031      $1.48M       $2.19M                                                                                              ║│
│  2032      $1.67M       $2.40M                                                                                              ║│
│  2033      $1.76M       $2.50M                                                                                              ║│
│  2034      $1.85M       $2.61M                                                                                              ║│
│  2035      $1.95M       $2.73M                                                                                              ║│
│  2036      $2.04M       $2.84M                                                                                              ║│
│  2037      $2.03M       $2.86M                                                                                              ║│
│  2038      $2.00M       $2.85M                                                                                              ║│
│  2039      $1.97M       $2.83M                                                                                              ║│
│  2040      $1.94M       $2.82M                                                                                              ║│
│  2041      $1.91M       $2.80M                                                                                              ▼│
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
Compare this plan with others in its folder: c adds one.                                                                        
 ↑↓ plan  ⏎ open  ←→ metric  ⇥ pane  c add  x remove  b baseline  d diff  v view  ctrl-s save  r reload      : commands  ? help
